--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,7 +1,11 @@
 <h1>This is index view</h1>
 <% @message.each do |message| %>
-<h2><%= message.title %></h2>
+<div class="col-md-4">
+    <div class="message">
+<h4 class="message-title"><%= message.title %></h4>
 <%= link_to "View Message", message_path(message), class: "btn btn_default" %>
+        </div>
+	</div>
 <% end %>
 
-<%= link_to "New Message", new_message_path %>
+	
