--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,2 +1,4 @@
-<h1>New message</h1>
-<%= render 'form'%>
+<div class="col-md-8 col-md-offset-2">
+	<h1 class="new-msg-header">New Message</h1>
+	<%= render 'form' %>
+</div>
